common/ansible/roles/vora/vora-kubernetes-install-cloud/files/gke-text-analysis-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: Internal
  labels:
    app: vora
    vora-component: textanalysis
  name: text-analysis-service-ext
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: textanalysis
    port: 10002
    protocol: TCP
    targetPort: 10002
  selector:
    app: vora
    vora-component: textanalysis
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
