common/ansible/roles/vora/vora-kubernetes-install-cloud/files/kops-text-analysis-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vora
    vora-component: textanalysis
  name: vora-textanalysis-ext
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: textanalysis
    port: 10002
    protocol: TCP
    targetPort: 10002
  selector:
    app: vora
    vora-component: textanalysis
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
